# socket_videocapture

./: CMakeLists.txt  Dockerfile  README.md  SConstruct  client_build_with_camera.sh  client_build_with_media.sh  client_flagfile_configure  compile.sh  server_build.sh  server_flagfile_configure  video_transport_client.cpp  video_transport_server.cpp
